fixed image overflow issue

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -13,12 +13,6 @@ html {
 	box-sizing: inherit;
 }
 
-body {
-	background: $color__background-body;
-	/*
-		Fallback for when there is no custom background color defined.
-	*/
-}
 
 hr {
 	background-color: $color__background-hr;
@@ -28,14 +22,5 @@ hr {
 }
 
 @import "lists";
-
-img {
-	height: auto; /* Make sure images are scaled correctly. */
-	max-width: 100%; /* Adhere to container width. */
-}
-
-figure {
-	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
-}
 
 @import "tables";
