--- a/sass/media/_figures.scss
+++ b/sass/media/_figures.scss
@@ -1,21 +1,19 @@
 figure {
   margin: 2em auto;
-  max-width: 600px;
-  max-width: -moz-min-content;
-  max-width: -webkit-min-content;
-  max-width: min-content;
+  max-width: 60vw;
 
   img {
-    max-width: inherit
+    max-width: 100%;
+    // object-fit: contain;
   }
 
   figcaption {
     color: $color__figure-text;
-    font-size: .8em;
+    font-size: .9em;
   }
 
   figcaption::before {
     counter-increment: figure_count;
-    content: "Figure " counter(figure_count) ": ";
+    content: "Figure "counter(figure_count) ": ";
   }
 }
