--- a/style.css
+++ b/style.css
@@ -886,13 +886,6 @@ html {
   box-sizing: inherit;
 }
 
-body {
-  background: #fff;
-  /*
-		Fallback for when there is no custom background color defined.
-	*/
-}
-
 hr {
   background-color: #ccc;
   border: 0;
@@ -924,18 +917,6 @@ dt {
 
 dd {
   margin: 0 1.5em 1.5em;
-}
-
-img {
-  height: auto;
-  /* Make sure images are scaled correctly. */
-  max-width: 100%;
-  /* Adhere to container width. */
-}
-
-figure {
-  margin: 1em 0;
-  /* Extra wide images within figure tags don't overflow the content area. */
 }
 
 table {
@@ -1786,19 +1767,16 @@ object {
 --------------------------------------------------------------*/
 figure {
   margin: 2em auto;
-  max-width: 600px;
-  max-width: -moz-min-content;
-  max-width: -webkit-min-content;
-  max-width: min-content;
+  max-width: 60vw;
 }
 
 figure img {
-  max-width: inherit;
+  max-width: 100%;
 }
 
 figure figcaption {
   color: #999;
-  font-size: .8em;
+  font-size: .9em;
 }
 
 figure figcaption::before {
